--- a/composer.json
+++ b/composer.json
@@ -1,6 +1,7 @@
 {
   "name": "oleksii/access",
   "description": "domain_access",
+  "minimum-stability": "stable",
   "require": {
     "guzzlehttp/guzzle": "^7.0",
     "league/csv": "^9.6"
