--- a/.gitattributes
+++ b/.gitattributes
@@ -1,1 +1,6 @@
-* linguist-language=PHP
+* text=auto
+*.php linguist-vendored
+*.css linguist-vendored
+*.scss linguist-vendored
+*.js linguist-vendored
+CHANGELOG.md export-ignore
